--- a/lektor/webpack/package.json
+++ b/lektor/webpack/package.json
@@ -35,5 +35,8 @@
     "url-loader": "^1.0.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^2.1.5"
+  },
+  "dependencies": {
+    "hoek": "^5.0.3"
   }
 }
